# Eon

./: .gitignore  CMakeLists.txt  Eon.sln  Eon.vcxproj  Eon.vcxproj.filters  README.md  imgui.ini
docs/: ChangeLog.md  ClassDiagram.md  DesignDocument.md  ExternalLibraries.md  FirstDraft.md  GameLoop.md
include/: CMakeLists.txt  audio.hpp  command.hpp  component.hpp  controls.hpp  core.hpp  entity.hpp  enums.hpp  manager.hpp  physics.hpp  render.hpp  systems_manager.hpp  texture.hpp  utils.hpp
include/audio/: audio.hpp  audio_component.hpp  audio_manager.hpp
include/controls/: ai_component.hpp  controls_manager.hpp  game_key_actions.hpp  movement_command.hpp  player_component.hpp
include/entity/: entity.hpp  entity_manager.hpp  entity_type.hpp
include/physics/: collision_command.hpp  displacement_command.hpp  physics_component.hpp  physics_manager.hpp
include/render/: render_component.hpp  render_draw_color_command.hpp  render_manager.hpp  texture_component.hpp
src/: audio.cpp  controls.cpp  core.cpp  entity.cpp  main.cpp  physics.cpp  render.cpp  systems_manager.cpp  texture.cpp  utils.cpp
src/audio/: audio_component.cpp  audio_manager.cpp
src/controls/: controls_manager.cpp  movement_command.cpp  player_component.cpp
src/entity/: entity.cpp  entity_manager.cpp
src/physics/: displacement_command.cpp  physics_component.cpp  physics_manager.cpp
src/render/: render_draw_color_command.cpp  render_manager.cpp  texture_component.cpp
tests/: hello_eon.cc
